6-anthos-install/acm-repos/root-config-repo/namespaces/boa/transactions/allow-transactions-sql-np-west.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
# accounts DB sql-boa-usw1-01
metadata:
  name: allow-sql-west
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 3307
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 10.16.64.0/24
    ports:
    - port: 3307
